# custom-ipywidget-example

./: .gitignore  MANIFEST.in  README.md  codecov.yml  custom_ipywidget_example.json  install.json  introduction.ipynb  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
custom_ipywidget_example/: __init__.py  _frontend.py
custom_ipywidget_example/nbextension/: extension.js
custom_ipywidget_example/tests/: test_nbextension_path.py
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
examples/.ipynb_checkpoints/: introduction-checkpoint.ipynb
myproject/: example.py
src/: component.tsx  extension.ts  plugin.ts  widget.ts  widget.tsx
